--- a/style.css
+++ b/style.css
@@ -3,3 +3,40 @@ body {
   height: 100%;
   margin: 0;
 }
+h1 {
+  margin: auto;
+  text-align: center;
+}
+img {
+  text-align: center;
+  vertical-align: middle;
+  width: 900px;
+}
+nav {
+  text-align: center;
+}
+nav a {
+  vertical-align: middle;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: blueviolet;
+}
+figcaption {
+font-size: small;
+text-align: center;
+}
+#featured-property p {
+width: 800px;
+text-align: center;
+padding-top: 10px;
+padding-bottom: 10px;
+padding-left: 70px;
+}
+#details div {
+  float: left;
+  text-align: center;
+  background-color: red;
+  vertical-align: middle;
+  padding: auto;
+  width: 25%;
+}
